@@ -27,6 +27,7 @@ Changes for 1.3.5.2
 -Added wireless game controllers battery status displaying when enabled at the settings
 -Added device battery status displaying at the right-top corner when enabled at the settings
 -Fixed an inability to save the game when game assets were stored at SD Card on an Android device
+-Added support for gamecontrollerdb.txt at the assets root and at the user directory
 
 Changes for 1.3.5.1
 -Episodes and battle levels lists now loading in the separated thread with a progress showing
